[gd_scene load_steps=9 format=3 uid="uid://c5etyehjh3t6v"]

[ext_resource type="Script" path="res://scripts/ball.gd" id="1_hcwme"]
[ext_resource type="Texture2D" uid="uid://b63x57dird4xj" path="res://assets/textures/players/Flag 2 - Madagascar.png" id="2_88wk6"]
[ext_resource type="ArrayMesh" uid="uid://kawnxkqfp0wl" path="res://assets/models/player-ball.obj" id="3_l8kvn"]
[ext_resource type="PackedScene" uid="uid://dlqgpl5k4plgh" path="res://scenes/cores/camera.tscn" id="4_w7a02"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5y68j"]
friction = 2.0
rough = true
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_qmvho"]
radius = 0.998679

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qg73s"]
albedo_texture = ExtResource("2_88wk6")
roughness = 0.4
disable_receive_shadows = true

[sub_resource type="SphereShape3D" id="SphereShape3D_g2q3i"]
radius = 1.0001

[node name="Ball" type="RigidBody3D" groups=["player"]]
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_5y68j")
gravity_scale = 2.0
angular_damp = 1.0
script = ExtResource("1_hcwme")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_qmvho")

[node name="Model" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_qg73s")
mesh = ExtResource("3_l8kvn")

[node name="CheckFloor" type="RayCast3D" parent="."]
top_level = true
target_position = Vector3(0, -1.15, 0)

[node name="CameraRig" parent="." instance=ExtResource("4_w7a02")]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_g2q3i")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
